# perlin_toy

./: Cargo.toml  README.md
src/: application.rs  colors.rs  main.rs  noise_map.rs
