[package]
name = "perlin_toy"
version = "0.1.0"
authors = ["TJ Peden <tj@tjcoding.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
perlin_noise = "1.0.1"
piston = "0.50.0"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
pistoncore-glutin_window = "0.64.0"
